src/test/deca/context/invalid/pierre/objects/wrongReturnType.deca
class test {

    boolean a(int i) {
        return i;
    }
}
{}